добавил возможность сортировки при запросе списка пациентов